welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:6: error: not found: value caseORange
  caseOrange=caseORange + 1
             ^