welcome.lessons.welcome.variables.RunHalf.scala.code
var caseOrange:Int=0
var biscuits:Int=0
while (2*biscuits==caseOrange+1){
  avance()
  if (estSurOrange) 
  caseOrange=caseORange + 1
  if (estSurBiscuit)
  biscuits=biscuits + 1
}
